Se agrego formulario

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>Titulo Página Principal</h1>
     <p>Nuevo Parrafo</p>
     <hr>
+    <form action="#" method="">
+        <input type="submit" name="Boton">
+    </form>
 </body>
 </html>
