Se agrego titulo al formulario

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Nuevo Parrafo</p>
     <hr>
     <form action="#" method="">
+        <label>Formulario 1</label>
         <input type="submit" name="Boton">
     </form>
 </body>
