Se agrego un campo nuevo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <form action="#" method="">
         <label>Formulario 1</label>
         <input type="submit" name="Boton">
+        <label>Formulario 2</label>
+        <input type="submit" name="Boton">
     </form>
 </body>
 </html>
