Se modifica y agrega cambios al formulario

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <p>Nuevo Parrafo</p>
     <hr>
     <form action="#" method="">
-        <label>Formulario 1</label>
-        <input type="submit" name="Boton">
-        <label>Formulario 2</label>
+        <label>Nombre</label>
+        <input type="text" name="nombre">
+        <label>Edad</label>
+        <input type="text" name="edad">
+        <label>Boton</label>
         <input type="submit" name="Boton">
     </form>
 </body>
