Se cambia nombre por apellido

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Nuevo Parrafo</p>
     <hr>
     <form action="#" method="">
-        <label>Nombre</label>
+        <label>Apellido</label>
         <input type="text" name="nombre">
         <label>Edad</label>
         <input type="text" name="edad">
