Agrego campo faltante

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <hr>
     <form action="#" method="">
         <label>Apodo</label>
+        <input type="text" name="apodo">
         <label>Nombre</label>
         <input type="text" name="nombre">
         <label>Edad</label>
