Agregar img funcionalidad

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input type="text" name="edad">
         <label>Boton</label>
         <input type="submit" name="Boton">
+        <img src="#" alt="Nada">
     </form>
 </body>
 </html>
