--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <label>Boton</label>
         <input type="submit" name="Boton">
         <img src="#" alt="Nada">
+        <img src="#" alt="Nada2">
     </form>
 </body>
 </html>
