Se agrego boton cerrar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <input type="text" name="direccion">
         <label>Boton</label>
         <input type="submit" name="Boton">
+        <label>Cerrar</label>
+        <input type="submit" name="Cerrar">
         <img src="#" alt="Nada">
+
     </form>
 </body>
 </html>
