Se agrega campo fecha

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <input type="text" name="edad">
         <label>Dirección</label>
         <input type="text" name="direccion">
+        <label>Fecha</label>
+        <input type="text" name="fecha">
         <label>Boton</label>
         <input type="submit" name="Boton">
         <label>Cerrar</label>
