--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <label>Cerrar</label>
         <input type="submit" name="Cerrar">
     </form>
+    <form>
+        <p>Mi parrafo</p>
+    </form>
 </body>
 </html>
