División agregada entre formularios y titulo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <label>Cerrar</label>
         <input type="submit" name="Cerrar">
     </form>
+    <hr>
     <form>
+        <h1>Nuevo</h1>
         <p>Mi parrafo</p>
     </form>
 </body>
