--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <input type="text" name="apodo">
         <label>Nombre</label>
         <input type="text" name="nombre">
+        <label>Apellido</label>
+        <input type="text" name="apellido">
         <label>Edad</label>
         <input type="text" name="direccion">
         <label>Fecha</label>
