Imagen personal agregada

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="text" name="apodo">
         <label>Nombre</label>
         <input type="text" name="nombre">
+        <img src="#" alt="Persona">
         <label>Edad</label>
         <input type="text" name="direccion">
         <label>Fecha</label>
