Se agrego video

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <form>
         <h1>Nuevo</h1>
         <p>Mi parrafo</p>
+        <video src="log.mp4"></video>
     </form>
 </body>
 </html>
