--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <form>
         <h1>Nuevo</h1>
         <p>Mi parrafo</p>
-        <video src="log.mp4"></video>
+        <video src="videoslog/log.mp4"></video>
     </form>
 </body>
 </html>
