--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h1>Nuevo</h1>
         <p>Mi parrafo</p>
         <video src="videoslog/log.mp4"></video>
+        <video src="videoslog/log.mp4"></video>
     </form>
 </body>
 </html>
